Refactoring Users MS and added Auth MS
